# decimal-physics-controller

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  manifest.json  pyproject.toml  requirements.txt  setup.py  validation_checklist.py
benchmarks/: README.md  __init__.py  application_benchmarks.py  benchmark_energy_calculations.py  benchmark_physics_calculations.py  benchmark_vector_operations.py  conftest.py  fileformat_benchmarks.py  filesystem_benchmarks.py  manifest.json
decimal_physics_controller/: __init__.py  ai_controller.py  core.py  quantum_entropy.py  schrodinger_cat.py  thermodynamics.py
docs/: schrodinger_cat_api.md
examples/: 01_orbit_decay.py  02_schrodinger_cat.py  02_schrodinger_cat_quick_test.py
src/core/: controller.py
tests/: test_core.py  test_schrodinger_cat.py
